[package]
name = "twl-fw"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
guard = "0.5.2"
once_cell = "1.18.0"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["rt"] }
tracing = "0.1.37"
twilight-cache-inmemory = { version = "0.15.4", optional = true }
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-interactions = "0.15.2"
twilight-model = "0.15.2"
twilight-util = { version = "0.15.2", features = ["builder"] }
